<resources>
    <string name="app_name">Slices</string>
    <string name="view_label">View:</string>
    <string name="waiting_list">Waiting List</string>
    <string name="invited_list">Invited</string>
    <string name="participants_list">Participants</string>
    <string name="cancelled_list">Cancelled</string>
    <string name="no_entrants">No entrants</string>
    <string name="no_entrants_message">No entrants have joined this event yet.</string>
    <string name="error_label">Error</string>
    <string name="error_loading_entrants">An error occurred while loading entrants.</string>
    <string name="error_invalid_event_id">Invalid event ID</string>
    <string name="error_failed_to_load_entrants">Failed to load entrants</string>
    <string name="anonymous_user">Anonymous User</string>
    <string name="no_email_provided">No email provided</string>
    <string name="entrant_count_singular">%d entrant</string>
    <string name="entrant_count_plural">%d entrants</string>
    <string name="my_events">My Events</string>
    <string name="create_event">Create Event</string>
    <string name="notifications">Notifications</string>
    <string name="menu">Menu</string>


    <!-- Notification strings -->
    <string name="send_notification">Send Notification</string>
    <string name="send_to_waitlist">Send to Waitlist</string>
    <string name="send_to_participants">Send to Participants</string>
    <string name="send_to_selected">Send to Selected</string>
    <string name="notification_title">Notification Title</string>
    <string name="notification_message">Notification Message</string>
    <string name="send">Send</string>
    <string name="cancel">Cancel</string>
    <string name="select_entrants">Select Entrants</string>
    <string name="notification_sent_success">Notification sent successfully to %d entrants</string>
    <string name="notification_send_failed">Failed to send notification</string>
    <string name="no_entrants_selected">Please select at least one entrant</string>
    <string name="notification_title_required">Please enter a notification title</string>
    <string name="notification_message_required">Please enter a notification message</string>
    
    <!-- Map strings -->
    <string name="show_map">Show entrant locations on map</string>
    <string name="entrant_locations">Entrant Locations</string>
    <string name="no_locations_available">No location data available for entrants</string>
    <string name="location_not_enabled">This event does not have geolocation enabled</string>
    
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>